ArgoCD Java 17 changes